Etapa 2/Compilador minijava - etapa 2/bin/tests/tests sintácticos/invalidos/test5.java
/*
Test5
Objetivo: Detectar un error en la declaracion de un metodo.
La palabra static esta mal escrita.
*/

class UnaClase extends Hola {
	varinst TipoVariable n;
	
	UnaClase (){
	
	}
	
	stati Metodo(){
	}
	
}